<resources>
    <string name="app_name">NepBay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_register">Register</string>
    <string name="prompt_mobile">Mobile Number</string>
    <string name="prompt_username">Username</string>
    <string name="accept_user_agreement"><![CDATA[I  have read and accepted User Agreement & Privacy Policy.]]></string>
    <string name="title_activity_product_detail">ProductDetail</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title_activity_search_result">Search Results</string>
    <string name="name_label">Name : </string>
    <string name="email_label">Email :</string>
    <string name="username">Username : </string>
    <string name="total_order_label">Total Order(s) : </string>
    <string name="rejected_order_label">Rejected\n Order(s)</string>
    <string name="approved_order_label">Approved\n Order(s)</string>
    <string name="pending_order_label">Pending\nOrder(s)</string>
    <string name="phone_label">Phone :</string>
    <string name="order_by_phone_dialog_title_label">Order By Phone, Call Us:</string>
    <string name="order_pop_up_positive_string">Ok</string>
    <string name="order_pop_up_negative_string">Cancel</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="billing_address_label">Billing Address</string>
    <string name="address_country_label">Country</string>
    <string name="address_state_label">State</string>
    <string name="address_city_label">City</string>
    <string name="address_zip_label">Zip</string>
    <string name="address_phone_label">Phone</string>
    <string name="address_label">Address</string>
    <string name="address_1_label">Address 1</string>
    <string name="address_2_label">Address 2</string>
    <string name="place_order">Confirm Order</string>
    <string name="billing_address_1_label">Address 1: </string>
    <string name="billing_address_2_label">Address 2: </string>
    <string name="shipping_address_1_label">Address 1: </string>
    <string name="shipping_address_2_label">Address 2: </string>
    <string name="shipping_address_label">Delivery Address</string>
    <string name="country_label">Country :</string>
    <string name="state_label">State :</string>
    <string name="city_label">City :</string>
    <string name="zip_label">Postal :</string>
    <string name="cash_on_delivery_dialog_title_label">Cash on Delivery</string>
    <string name="bank_transfer_dialog_title_label">Bank Transfer</string>
    <string name="edit_password_label">Password :</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="passwords_not_same">Passwords do not Match!</string>
    <string name="privacy_user">Please Accept our Terms of Use and Privacy Policy !</string>
    <string name="logged_out">Successfully logged out!</string>
    <string name="logged_out_failed">Can not log out at the Moment !\n Please try again later!</string>
    <string name="fill_all_fields">Please fill all the fields !</string>
    <string name="username_password_incorrect">Incorrect username/email/mobile or password!</string>
    <string name="no_internet">No Internet Connection! Please check your connection!</string>
    <string name="not_yet_user">Register</string>
    <string name="not_logged_in">Not Logged In!</string>
    <string name="press_again_exit">Press Back again to Exit!</string>
    <string name="mobile_label">Mobile :</string>
    <string name="updating">Updating...</string>
    <string name="profile_update_success">Profile Updated !</string>
    <string name="profile_update_not_success">Update was not successful!\n Please try again later.</string>
    <string name="logging_in">Logging in...</string>
    <string name="login_failed">Could not login! Try again Later</string>
    <string name="logging_out">Logging out...</string>
    <string name="registering">Please wait a moment, registering...</string>
    <string name="activating">Please wait a moment, activating account...</string>
    <string name="register_failed">Could not Register! Please Try in a While</string>
    <string name="register_successful">Registered successfully, Please Login now!</string>
    <string name="activation_failed">Invalid Activation Code, Please try again!</string>
    <string name="activation_successful">Account activated successfully, Please Login now!</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_app_tour">AppTour</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="no_product_found">No Product Found!</string>
    <string name="placing_order">Placing you order...</string>
    <string name="activate">Activate</string>
    <string name="activation_title">Activation</string>
    <string name="activation_para">An activation code was sent to your Mobile.\nEnter the code below:</string>
    <string name="register_para">New to NepBay? Get started now.</string>
    <string name="request_activation_code">Request activation code.</string>
    <string name="right_drawer_title">Shop by Departments</string>
    <string name="please_wait">Please Wait...</string>
    <string name="prompt_username_email_phone">Username/Email/Mobile</string>
    <string name="link_sell_my_products">www.nepbay.com</string>
    <string name="no_sms_check_email">Check your email if you haven\'t received SMS.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender :</string>
    <string name="no_sms_call_us">NOTE: If you do not receive activation code in your SMS, please call us at: +977-985-123-1001 (Mobile/Viber/WhatsApp) for manual activation.</string>
</resources>